<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pantalla_de"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipToOutline="true"
    android:elevation="4dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="198dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/iniciarsesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/iniciarSesion"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/correoelectronico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/correoElectronico"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/introducircorreoelectronico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/contraseña"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/introducircontraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/botoniniciarsesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/iniciarSesion" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp">

        <TextView
            android:id="@+id/botonrecuperarcontraseña"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text="@string/olvidarContraseña"
            android:textColor="#A1A1A1"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/botonRegistro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:text="@string/registrarse"
            android:textAlignment="textEnd"
            android:textColor="#2196F3"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>