<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pantalla_de"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clipToOutline="true"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="219dp"
            android:layout_height="122dp"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:text="@string/nombre"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/introducirnombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="8dp"
            android:ems="10" />

        <TextView
            android:id="@+id/correoelectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:text="@string/correoElectronico"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/introducircorreoelectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:text="@string/contraseña"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/introducircontraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPassword" />
        <TextView
            android:id="@+id/genero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:text="@string/genero"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/seleccionargenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:spinnerMode="dropdown" />

        <Button
            android:id="@+id/confirmarRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:text="@string/registrarse" />

    </LinearLayout>
</RelativeLayout>